# RAAS

./: .gitignore  CMakeLists.txt  README.md  prepare_library.sh
containers/: raas-only.def
docs/: Doxyfile
include/: instrumentation.h
src/: RAAS.cpp  embedding.cpp  embedding.h  python_embedder.cpp  raas_support.cpp
src/jit/: ApproxLayer.cpp  ApproxLayer.h  CMakeLists.txt  Core.h  EvaluationSystem.cpp  ForbiddenApproximations.cpp  JIT.cpp  JIT.h  SimpleEvaluator.cpp  SimpleEvaluator.h
src/jit/misc/: CustomDemangler.cpp  CustomDemangler.h  VectorWrapper.h  utils.cpp  utils.h
src/jit/passes/: ApproximationAnalysis.cpp  CMakeLists.txt  FunctionApprox.cpp  GEMMApproximation.cpp  GetApproximableOpportunities.cpp  InstrumentApprox.cpp  LoopPerforation.cpp  Passes.cpp  Passes.h
